--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -14,10 +14,9 @@
       </div>
         <ul class="nav navbar-nav navbar-right">
           <li id="home"><a href="/">HOME</a></li>
-          <li id="compose"><a href="/compose">COMPOSE</a></li>
           <li id="profile"><a href="/profile">PROFILE</a></li>
-          <li id="about"><a href="/about">ABOUT US</a></li>
-          <li id="contact"><a href="/contact">CONTACT US</a></li>
+          <li id="about"><a href="/register">SIGN-UP</a></li>
+          <li id="contact"><a href="/login">LOGIN</a></li>
         </ul>
     </div>
   </nav>
