--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,8 @@
+body {
+  background-color: #fff;
+  margin: 0px;
+}
+
 html {
   min-height: 100%;
   position: relative;
@@ -7,6 +12,15 @@ html {
   padding-top: 70px;
   padding-bottom: 70px;
 }
+
+.success-container {
+  margin-top: 50px;
+}
+
+.jumbotron {
+  margin-top: 30px;
+}
+
 .navbar {
   padding-top: 15px;
   padding-bottom: 15px;
@@ -38,4 +52,18 @@ html {
   margin-top: 25px;
   font-size: 12px;
   color: #fff;
+}
+
+.compose {
+  text-align: center;
+  font-size: 2rem;
+  color: #fff;
+  background-color: #000;
+}
+
+.log-btn {
+  text-align: center;
+  font-size: 2rem;
+  color: #000;
+  background-color: #fff;
 }
